--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,10 +4,12 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-ash = "0.38.0+1.3.281"
+ash = { version = "0.38.0+1.3.281", optional = true }
 libc = "1.0.0-alpha.1"
 thiserror = "2.0.17"
+sdl3 = "0.16.2"
 
 [features]
-vulkan = []
-default = ["vulkan"]
+sdl = []
+vulkan = ["ash"]
+default = ["sdl", "vulkan"]
