--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ ash = { version = "0.38.0+1.3.281", optional = true }
 libc = "1.0.0-alpha.1"
 thiserror = "2.0.17"
 sdl3 = "0.16.2"
+anyhow = "1.0.100"
 
 [features]
 sdl = []
