--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 
 [dependencies]
 ash = { version = "0.38.0+1.3.281", optional = true }
+bytemuck = "1.24.0"
 hassle-rs = "0.12.0"
 libc = "1.0.0-alpha.1"
 thiserror = "2.0.17"
